# Dashboard-Template

./: Dockerfile  README.md  s2config.json
s2-dashboard-template/: .env.example  README.md  pyproject.toml
s2-dashboard-template/s2_dashboard_template/: __init__.py
s2-dashboard-template/s2_dashboard_template/dashboard/: dashboard.py
s2-dashboard-template/s2_dashboard_template/db/: database.py  model.py
s2-dashboard-template/s2_dashboard_template/graph/: graph.py
