[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]

[project]
  dependencies = ["singlestoredb (>=1.11.0,<2.0.0)","python-dotenv (>=1.0.1,<2.0.0)"]
  description = ""
  name = "s2-dashboard-template"
  readme = "README.md"
  requires-python = "^3.11"
  version = "1.0.0"
  [project.scripts]
    my-script = "s2_dashboard_template:main"
